<resources>
    <string name="app_name">Pocket Meal</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_drawer_activity">drawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_food">Food List</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_add_food">Add Food</string>
    <string name="menu_details_food">Food Details</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="map_key" translatable="false">AIzaSyAnjX1BRY-UFZWr1rwI1_nuqxThU70wBQc</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
